--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,9 @@
             android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
+            android:text="- This App just for testing kotlin "
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
     <Button
             android:id="@+id/btn_calc"
             android:layout_width="wrap_content"
@@ -26,5 +25,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.501"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv1"/>
+
+    <Button
+            android:id="@+id/btn_fragment_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="* Fragment *"
+
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_calc"/>
 
 </android.support.constraint.ConstraintLayout>
